# quarry

./: .env.example  .gitignore  SPEC.md  pyproject.toml
.beads/: issues.jsonl
backend/: config.py  main.py
backend/backends/: base.py  claude.py  gemini.py  grok.py
backend/db/: database.py
backend/models/: brief.py  citation.py  report.py  source.py
backend/orchestrator/: dispatcher.py  synthesizer.py  typst_generator.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatSidebar.tsx  ReportViewer.tsx
frontend/src/hooks/: useTypst.ts  useWebSocket.ts
frontend/src/types/: index.ts
typst/components/: citation.typ  conflict-box.typ
typst/templates/: report.typ
